--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.0",
     "@types/node-fetch": "^2.6.2",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
